Closed Bug 1104660 Opened 9 years ago Closed 9 years ago

NativeFileWatcherWin.cpp uses an uninitialized object when failing to watch in |AddPathRunnableMethod|

Categories

(Toolkit Graveyard :: OS.File, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla36

People

(Reporter: Dexter, Assigned: Dexter)

References

Details

Attachments

(1 file)

|watchedResource->mPath| should not be used at http://dxr.mozilla.org/mozilla-central/source/toolkit/components/filewatcher/NativeFileWatcherWin.cpp#696, since |watchedResource| it is only valid when a valid watch has been already created.

|wrappedParameters->mPath| should be used instead.
Blocks: 992894
Assignee: nobody → alessio.placitelli
Attached patch bug1104660.patchSplinter Review
Attachment #8528321 - Flags: review?(dteller)
Comment on attachment 8528321 [details] [diff] [review]
bug1104660.patch

Review of attachment 8528321 [details] [diff] [review]:
-----------------------------------------------------------------

Good catch.
Attachment #8528321 - Flags: review?(dteller) → review+
Here's a link to the try push (win32, xpcshell only): https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=ceaa43e7ae28
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/c337e74c8869
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Whiteboard: [fixed-in-fx-team]
Target Milestone: --- → mozilla36
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.