Bug 1104660 - Use |wrappedParameters| instead of |watchedResource| when failing to watch a resource in |AddPathRunnableMethod|. r=Yoric